--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -83,6 +83,7 @@ body {
     border: 1px solid rgba(255, 255, 255, 0.2);
     padding: 20px;
     text-align: center;
+    margin-bottom: 5rem;
 }
 
 .stat-card h3 {
