--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -68,6 +68,7 @@ body {
     padding: 20px;
     margin-bottom: 30px;
     color: white;
+    text-align: center;
 }
 
 .stats {
@@ -83,6 +84,7 @@ body {
     border: 1px solid rgba(255, 255, 255, 0.2);
     padding: 20px;
     text-align: center;
+    margin-bottom: 3rem;
 }
 
 .stat-card h3 {
