--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -88,13 +88,16 @@ body {
 }
 
 .stat-card h3 {
+    color: rgb(255, 255, 255);
     font-size: 36px;
     margin-bottom: 5px;
 }
 
 .stat-card p {
+    color: rgb(255, 255, 255);
     font-size: 14px;
     opacity: 0.8;
+    font-weight: bold;
 }
 
 .table-container {
